--- a/src/main/webapp/cart.html
+++ b/src/main/webapp/cart.html
@@ -1,7 +1,6 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -130,8 +129,17 @@
     .checkout-btn:hover {
       background-color: #3e42a1;
     }
+
+    .nav-icon a {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      color: inherit;
+      text-decoration: none;
+    }
   </style>
 </head>
+
 <body>
 
   <!-- Navigation Bar -->
@@ -141,12 +149,12 @@
     </div>
     <div class="nav-right">
       <div class="nav-icon">
-        <i data-lucide="user"></i>
-        <span>Profile</span>
+        <a href="profile.html"> <i data-lucide="user"></i> <span>Profile</span>
+        </a>
       </div>
       <div class="nav-icon">
-        <i data-lucide="shopping-cart"></i>
-        <span>Cart</span>
+        <a href="cart.html"> <i data-lucide="shopping-cart"></i> <span>Cart</span>
+        </a>
       </div>
     </div>
   </nav>
@@ -154,72 +162,121 @@
   <!-- Cart Page -->
   <div class="cart-container">
     <h2>Your Cart</h2>
-
-    <!-- Cart Items Section -->
-    <div class="cart-items" id="cartItems">
-      <!-- Cart items will be dynamically inserted here -->
-    </div>
-
-    <!-- Total Price Section -->
+    <div class="cart-items" id="cartItems"></div>
     <div class="total-price" id="totalPrice">Total: ₹0</div>
-
-    <!-- Checkout Button -->
     <button class="checkout-btn" onclick="proceedToCheckout()">Proceed to Checkout</button>
   </div>
+
+  <!-- Modal -->
+  <div id="checkoutModal" style="display: none; position: fixed; top: 0; left: 0; 
+  width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); 
+  justify-content: center; align-items: center; z-index: 9999;">
+    <div style="background-color: white; padding: 30px 40px; border-radius: 10px; text-align: center;">
+      <h2>Order placed successfully!</h2>
+      <button onclick="closeModal()"
+        style="margin-top: 20px; padding: 10px 20px; background-color: #4e54c8; color: white; border: none; border-radius: 6px; cursor: pointer;">OK</button>
+    </div>
+  </div>
+
 
   <!-- Script -->
   <script>
     lucide.createIcons();
 
-    let cart = [
-      { id: 1, name: "Wireless Mouse", price: 799, quantity: 1 },
-      { id: 2, name: "Bluetooth Keyboard", price: 1499, quantity: 2 }
-    ];
+    const customerId = localStorage.getItem("customerId");
+    let cart = [];
 
-    // Function to render cart items
+    async function fetchCartItems() {
+      try {
+        const response = await fetch(`http://localhost:3010/api/cart/${customerId}/items`);
+        if (!response.ok) throw new Error("Failed to load cart items");
+
+        cart = await response.json();
+        renderCartItems();
+      } catch (err) {
+        console.error("Error:", err);
+        document.getElementById("cartItems").innerHTML = "<p>Error loading cart items.</p>";
+      }
+    }
+
     function renderCartItems() {
       const cartItemsContainer = document.getElementById("cartItems");
       cartItemsContainer.innerHTML = "";
 
-      cart.forEach(item => {
-        const cartItemDiv = document.createElement("div");
-        cartItemDiv.classList.add("cart-item");
-        cartItemDiv.innerHTML = `
-          <h4>${item.name} - ₹${item.price} x ${item.quantity}</h4>
-          <button onclick="removeItemFromCart(${item.id})">Remove</button>
-        `;
-        cartItemsContainer.appendChild(cartItemDiv);
-      });
+      let total = 0;
 
-      updateTotalPrice();
-    }
-
-    // Function to remove an item from the cart
-    function removeItemFromCart(id) {
-      cart = cart.filter(item => item.id !== id);
-      renderCartItems();
-    }
-
-    // Function to update the total price
-    function updateTotalPrice() {
-      const totalPrice = cart.reduce((total, item) => total + (item.price * item.quantity), 0);
-      document.getElementById("totalPrice").innerText = `Total: ₹${totalPrice}`;
-    }
-
-    // Function to simulate proceeding to checkout
-    function proceedToCheckout() {
       if (cart.length === 0) {
-        alert("Your cart is empty. Add items to the cart before proceeding.");
+        cartItemsContainer.innerHTML = "<p>Your cart is empty.</p>";
+        document.getElementById("totalPrice").innerText = "Total: ₹0";
         return;
       }
 
-      alert("Proceeding to checkout...");
-      // API call logic for checkout can go here
-      // Example: POST /checkout with cart data
+      cart.forEach(ci => {
+        const item = ci.item;
+        const price = item.price * ci.quantity;
+        total += price;
+
+        const cartItemDiv = document.createElement("div");
+        cartItemDiv.classList.add("cart-item");
+
+        cartItemDiv.innerHTML = `
+          <h4>${item.name} - ₹${item.price} x ${ci.quantity}</h4>
+          <button onclick="removeItemFromCart(${ci.id})">Remove</button>
+        `;
+
+        cartItemsContainer.appendChild(cartItemDiv);
+      });
+
+      document.getElementById("totalPrice").innerText = `Total: ₹${total}`;
     }
 
-    // Initial render
-    renderCartItems();
+    async function removeItemFromCart(cartItemId) {
+      try {
+        const res = await fetch(`http://localhost:3010/api/cart/item/${cartItemId}`, {
+          method: "DELETE"
+        });
+        if (!res.ok) throw new Error("Failed to remove item");
+        cart = cart.filter(item => item.id !== cartItemId);
+        renderCartItems();
+      } catch (err) {
+        console.error("Error removing item:", err);
+      }
+    }
+
+
+    async function proceedToCheckout() {
+      if (cart.length === 0) {
+        alert("Your cart is empty. Add items before checkout.");
+        return;
+      }
+
+      try {
+        const response = await fetch(`http://localhost:3010/api/orders/checkout/${customerId}`, {
+          method: "POST"
+        });
+
+        const data = await response.json();
+
+        if (response.ok) {
+          document.getElementById("checkoutModal").style.display = "flex";
+        } else {
+          alert(data.error || "Checkout failed.");
+        }
+      } catch (err) {
+        console.error("Checkout error:", err);
+        alert("An error occurred during checkout.");
+      }
+    }
+
+    function closeModal() {
+      document.getElementById("checkoutModal").style.display = "none";
+      cart = [];
+      renderCartItems();
+    }
+
+
+    fetchCartItems();
   </script>
 </body>
+
 </html>
