--- a/src/main/webapp/admin-dashboard.html
+++ b/src/main/webapp/admin-dashboard.html
@@ -128,6 +128,10 @@
 			<a href="admin-vendors.html" class="nav-link">
 				<i data-lucide="store"></i><span>Vendor</span>
 			</a>
+			<a href="#" class="nav-link" onclick="logout()">
+				<i data-lucide="log-out"></i><span>Logout</span>
+			</a>
+
 		</div>
 	</nav>
 
@@ -142,8 +146,18 @@
 	</div>
 
 	<script>
+		if (localStorage.getItem("isAdmin") !== "true") {
+			window.location.href = "index.html";
+		}
+		function logout() {
+			localStorage.removeItem("isAdmin");
+			alert("Logged out successfully.");
+			window.location.href = "index.jsp"; // redirect to login page
+		}
+
 		lucide.createIcons();
 	</script>
+
 
 </body>
 
